step14: 6 Creating a Composable out of XML

--- a/week 4-2-Migrating to Jetpack Compose/app/src/main/res/layout/fragment_plant_detail.xml
+++ b/week 4-2-Migrating to Jetpack Compose/app/src/main/res/layout/fragment_plant_detail.xml
@@ -93,7 +93,7 @@
             android:paddingBottom="@dimen/fab_bottom_padding"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--            <androidx.constra`intlayout.widget.ConstraintLayout-->
 <!--                android:layout_width="match_parent"-->
 <!--                android:layout_height="match_parent"-->
 <!--                android:layout_margin="@dimen/margin_normal">-->
